
[Test_index - 1]
<!DOCTYPE html>
<html>
<head>
  <title></title>
  <meta name="GENERATOR" content="github.com/gomarkdown/markdown markdown processor for Go">
  <meta charset="utf-8">
</head>
<body>

<p>This is the home page</p>

</body>
</html>

---

[Test_other - 1]
<!DOCTYPE html>
<html>
<head>
  <title></title>
  <meta name="GENERATOR" content="github.com/gomarkdown/markdown markdown processor for Go">
  <meta charset="utf-8">
</head>
<body>

<p>This is another page</p>

</body>
</html>

---

[Test_styleCSS - 1]
body {
    margin: 40px auto;
    max-width: 650px;
    line-height: 1.4;
    font-size: 18px;
    color: #444;
    background-color: #EEE;
    padding: 0 10px;
}

h1,h2,h3,h4,h5,h6 {
    line-height: 1.2;
}

---

[Test_subdir - 1]
<!DOCTYPE html>
<html>
<head>
  <title></title>
  <meta name="GENERATOR" content="github.com/gomarkdown/markdown markdown processor for Go">
  <meta charset="utf-8">
</head>
<body>

<p>This is in a subdirectory</p>

</body>
</html>

---
